esim first succeful trial, shown improvement over self-att

--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,54 +66,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>410289</th>\n",
+       "      <th>503432</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0396171</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2007-11-29</td>\n",
-       "      <td>Don't let this film prevent you from reading t...</td>\n",
-       "      <td>The novel by Patrick Süskind on which the scri...</td>\n",
-       "      <td>ur17559125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>510061</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt0110148</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2002-01-22</td>\n",
-       "      <td>Apparently, Vampires Don't Fear CHEESE, Either!!!</td>\n",
-       "      <td>Let me begin by saying that I have never read ...</td>\n",
-       "      <td>ur1542448</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>312153</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt0289043</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2003-04-27</td>\n",
-       "      <td>It's all been done before</td>\n",
-       "      <td>This story has been done so many times, it's h...</td>\n",
-       "      <td>ur2347354</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182045</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt1663662</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2013-07-13</td>\n",
-       "      <td>Cancelling the apocalypse has never looked so ...</td>\n",
-       "      <td>The publicity for Guillermo del Toro's robots ...</td>\n",
-       "      <td>ur22164449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>491546</th>\n",
-       "      <td>True</td>\n",
-       "      <td>tt0102526</td>\n",
+       "      <td>tt0107362</td>\n",
        "      <td>9</td>\n",
-       "      <td>2017-05-28</td>\n",
-       "      <td>Wesley Snipes is brilliant</td>\n",
-       "      <td>This movie is unlike any other gangster movie ...</td>\n",
-       "      <td>ur33697153</td>\n",
+       "      <td>2016-09-04</td>\n",
+       "      <td>Waay underrated delightful entertainment...</td>\n",
+       "      <td>I'm giving it a 9, since the movie tickles you...</td>\n",
+       "      <td>ur20597848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14719</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0110912</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1999-02-19</td>\n",
+       "      <td>Appropriately named, excellently crafted.</td>\n",
+       "      <td>This movie is excellent.  Why?  Most important...</td>\n",
+       "      <td>ur0220236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333343</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0349205</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2004-02-16</td>\n",
+       "      <td>HILARIOUS!</td>\n",
+       "      <td>This movie is great.  There are some really fu...</td>\n",
+       "      <td>ur3110774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>557576</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0169547</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2000-03-04</td>\n",
+       "      <td>The best movie I've ever seen. It opened my ey...</td>\n",
+       "      <td>American Beauty is absolutely beautiful. I'm s...</td>\n",
+       "      <td>ur0471080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265667</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt1396484</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2017-09-20</td>\n",
+       "      <td>Wait. This was good?? (L)IT!</td>\n",
+       "      <td>So, I went and seen IT with my girlfriend and ...</td>\n",
+       "      <td>ur53564317</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -121,28 +121,28 @@
       ],
       "text/plain": [
        "        is_spoiler   movie_id  rating review_date  \\\n",
-       "410289       False  tt0396171       4  2007-11-29   \n",
-       "510061       False  tt0110148       4  2002-01-22   \n",
-       "312153       False  tt0289043       3  2003-04-27   \n",
-       "182045       False  tt1663662       8  2013-07-13   \n",
-       "491546        True  tt0102526       9  2017-05-28   \n",
+       "503432       False  tt0107362       9  2016-09-04   \n",
+       "14719        False  tt0110912      10  1999-02-19   \n",
+       "333343       False  tt0349205      10  2004-02-16   \n",
+       "557576       False  tt0169547      10  2000-03-04   \n",
+       "265667       False  tt1396484       8  2017-09-20   \n",
        "\n",
        "                                           review_summary  \\\n",
-       "410289  Don't let this film prevent you from reading t...   \n",
-       "510061  Apparently, Vampires Don't Fear CHEESE, Either!!!   \n",
-       "312153                          It's all been done before   \n",
-       "182045  Cancelling the apocalypse has never looked so ...   \n",
-       "491546                         Wesley Snipes is brilliant   \n",
+       "503432        Waay underrated delightful entertainment...   \n",
+       "14719           Appropriately named, excellently crafted.   \n",
+       "333343                                         HILARIOUS!   \n",
+       "557576  The best movie I've ever seen. It opened my ey...   \n",
+       "265667                       Wait. This was good?? (L)IT!   \n",
        "\n",
        "                                              review_text     user_id  \n",
-       "410289  The novel by Patrick Süskind on which the scri...  ur17559125  \n",
-       "510061  Let me begin by saying that I have never read ...   ur1542448  \n",
-       "312153  This story has been done so many times, it's h...   ur2347354  \n",
-       "182045  The publicity for Guillermo del Toro's robots ...  ur22164449  \n",
-       "491546  This movie is unlike any other gangster movie ...  ur33697153  "
+       "503432  I'm giving it a 9, since the movie tickles you...  ur20597848  \n",
+       "14719   This movie is excellent.  Why?  Most important...   ur0220236  \n",
+       "333343  This movie is great.  There are some really fu...   ur3110774  \n",
+       "557576  American Beauty is absolutely beautiful. I'm s...   ur0471080  \n",
+       "265667  So, I went and seen IT with my girlfriend and ...  ur53564317  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "1571                                                        4.0   1999-01-29  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -415,37 +415,37 @@
        "    <tr>\n",
        "      <th>573380</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0396171</td>\n",
-       "      <td>Don't let this film prevent you from reading t...</td>\n",
-       "      <td>Jean-Baptiste Grenouille came into the world u...</td>\n",
+       "      <td>tt0107362</td>\n",
+       "      <td>Waay underrated delightful entertainment... I'...</td>\n",
+       "      <td>Young Danny Madigan is a big fan of Jack Slate...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573381</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0110148</td>\n",
-       "      <td>Apparently, Vampires Don't Fear CHEESE, Either...</td>\n",
-       "      <td>It hasn't even been a year since a plantation ...</td>\n",
+       "      <td>tt0110912</td>\n",
+       "      <td>Appropriately named, excellently crafted. This...</td>\n",
+       "      <td>Jules Winnfield (Samuel L. Jackson) and Vincen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573382</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0289043</td>\n",
-       "      <td>It's all been done before This story has been ...</td>\n",
-       "      <td>Animal activists invade a laboratory with the ...</td>\n",
+       "      <td>tt0349205</td>\n",
+       "      <td>HILARIOUS! This movie is great.  There are som...</td>\n",
+       "      <td>The Bakers, a family of 14, move from small-to...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573383</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt1663662</td>\n",
-       "      <td>Cancelling the apocalypse has never looked so ...</td>\n",
-       "      <td>When monstrous creatures, known as Kaiju, star...</td>\n",
+       "      <td>tt0169547</td>\n",
+       "      <td>The best movie I've ever seen. It opened my ey...</td>\n",
+       "      <td>After his death sometime in his forty-third ye...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573384</th>\n",
-       "      <td>True</td>\n",
-       "      <td>tt0102526</td>\n",
-       "      <td>Wesley Snipes is brilliant This movie is unlik...</td>\n",
-       "      <td>The gangster Nino has a gang who call themselv...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>tt1396484</td>\n",
+       "      <td>Wait. This was good?? (L)IT! So, I went and se...</td>\n",
+       "      <td>In the Town of Derry, the local kids are disap...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -453,28 +453,28 @@
       ],
       "text/plain": [
        "        is_spoiler   movie_id  \\\n",
-       "573380       False  tt0396171   \n",
-       "573381       False  tt0110148   \n",
-       "573382       False  tt0289043   \n",
-       "573383       False  tt1663662   \n",
-       "573384        True  tt0102526   \n",
+       "573380       False  tt0107362   \n",
+       "573381       False  tt0110912   \n",
+       "573382       False  tt0349205   \n",
+       "573383       False  tt0169547   \n",
+       "573384       False  tt1396484   \n",
        "\n",
        "                                              review_text  \\\n",
-       "573380  Don't let this film prevent you from reading t...   \n",
-       "573381  Apparently, Vampires Don't Fear CHEESE, Either...   \n",
-       "573382  It's all been done before This story has been ...   \n",
-       "573383  Cancelling the apocalypse has never looked so ...   \n",
-       "573384  Wesley Snipes is brilliant This movie is unlik...   \n",
+       "573380  Waay underrated delightful entertainment... I'...   \n",
+       "573381  Appropriately named, excellently crafted. This...   \n",
+       "573382  HILARIOUS! This movie is great.  There are som...   \n",
+       "573383  The best movie I've ever seen. It opened my ey...   \n",
+       "573384  Wait. This was good?? (L)IT! So, I went and se...   \n",
        "\n",
        "                                             plot_summary  \n",
-       "573380  Jean-Baptiste Grenouille came into the world u...  \n",
-       "573381  It hasn't even been a year since a plantation ...  \n",
-       "573382  Animal activists invade a laboratory with the ...  \n",
-       "573383  When monstrous creatures, known as Kaiju, star...  \n",
-       "573384  The gangster Nino has a gang who call themselv...  "
+       "573380  Young Danny Madigan is a big fan of Jack Slate...  \n",
+       "573381  Jules Winnfield (Samuel L. Jackson) and Vincen...  \n",
+       "573382  The Bakers, a family of 14, move from small-to...  \n",
+       "573383  After his death sometime in his forty-third ye...  \n",
+       "573384  In the Town of Derry, the local kids are disap...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,11 +500,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of rows before dropping incomplete entries: 573385\n",
+      "# of rows after dropping incomplete entries: 573378\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>is_spoiler</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>review_text</th>\n",
+       "      <th>plot_summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt1024648</td>\n",
+       "      <td>Slow paced but interesting story based on true...</td>\n",
+       "      <td>In 1979, the American embassy in Iran was inva...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0914798</td>\n",
+       "      <td>An ethnic propaganda This is a very sick, sci-...</td>\n",
+       "      <td>Young Bruno lives a wealthy lifestyle in prewa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0265208</td>\n",
+       "      <td>The most underrated movie of all time! I first...</td>\n",
+       "      <td>18-year-old Matthew Kidman is a straight 'A' o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt1951261</td>\n",
+       "      <td>This is a fine ending to the series if it is t...</td>\n",
+       "      <td>In the aftermath of the death of Alan's father...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0118617</td>\n",
+       "      <td>One of the best! Anastasia (1997) is honestly ...</td>\n",
+       "      <td>The daughter of the last Russian Tsar, Nicolas...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   is_spoiler   movie_id                                        review_text  \\\n",
+       "0       False  tt1024648  Slow paced but interesting story based on true...   \n",
+       "1       False  tt0914798  An ethnic propaganda This is a very sick, sci-...   \n",
+       "2       False  tt0265208  The most underrated movie of all time! I first...   \n",
+       "3       False  tt1951261  This is a fine ending to the series if it is t...   \n",
+       "4       False  tt0118617  One of the best! Anastasia (1997) is honestly ...   \n",
+       "\n",
+       "                                        plot_summary  \n",
+       "0  In 1979, the American embassy in Iran was inva...  \n",
+       "1  Young Bruno lives a wealthy lifestyle in prewa...  \n",
+       "2  18-year-old Matthew Kidman is a straight 'A' o...  \n",
+       "3  In the aftermath of the death of Alan's father...  \n",
+       "4  The daughter of the last Russian Tsar, Nicolas...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_train.to_csv('./data/train.csv', sep='|', index=False)"
+    "print('# of rows before dropping incomplete entries:', df_train.shape[0])\n",
+    "dt_train=df_train.dropna()\n",
+    "print('# of rows after dropping incomplete entries:', df_train.shape[0])\n",
+    "df_train.to_csv('./data/train.csv', index=False)\n",
+    "df_train.head()"
    ]
   }
  ],
