--- a/esim.ipynb
+++ b/esim.ipynb
@@ -33,7 +33,7 @@
     "from d2l import try_gpu\n",
     "import pandas as pd\n",
     "\n",
-    "# iUse sklearn's metric function to evaluate the results of the experiment\n",
+    "# sklearn's metric function to evaluate the results of the experiment\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
     "# fixed random number seed\n",
@@ -894,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
