begin working on snli

--- a/esim.ipynb
+++ b/esim.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,8 @@
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
     "# fixed random number seed\n",
-    "np.random.seed(2333)\n",
-    "mx.random.seed(2333)"
+    "np.random.seed(9102)\n",
+    "mx.random.seed(9102)"
    ]
   },
   {
@@ -54,16 +54,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(550152, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data_folder = 'data/imdb/'\n",
+    "data_folder = 'data/snli/'\n",
     "file_name = 'train.csv'\n",
     "file_path = data_folder + file_name\n",
     "# dev: True - only use a small dataset\n",
     "# create_vocab: True - create a new vocabulary from training data\n",
-    "dev = True\n",
+    "dev = False\n",
     "# load train file\n",
     "if dev:\n",
     "    # load only n rows\n",
@@ -71,21 +82,22 @@
     "    data = pd.read_csv(file_path, nrows=nrows)\n",
     "else:\n",
     "    # load as many as possible\n",
-    "    data = pd.read_csv(file_path)"
+    "    data = pd.read_csv(file_path)\n",
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000, 4)"
+       "(550146, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,24 +109,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label2num = {'contradiction':0, 'neutral':1, 'entailment':2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9500, 500)"
+       "(521892, 27469)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create a list of review a label paris.\n",
-    "dataset = [[left, right, int(label)] for left, right, label in \\\n",
-    "           zip(data['review_text'], data['plot_summary'], data['is_spoiler'])]\n",
+    "dataset = [[left, right, label2num[label]] for left, right, label in \\\n",
+    "           zip(data['sentence1'], data['sentence2'], data['label']) if label!='-' ]\n",
     "# randomly divide one percent from the training set as a verification set.\n",
     "train_dataset, valid_dataset = nlp.data.train_valid_split(dataset)\n",
     "len(train_dataset), len(valid_dataset)"
@@ -132,15 +153,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! Sequence clipping and get length Time=4.39s, #Sentences=9500\n",
-      "Done! Sequence clipping and get length Time=0.54s, #Sentences=500\n"
+      "Done! Sequence clipping and get length Time=36.36s, #Sentences=521892\n",
+      "Done! Sequence clipping and get length Time=2.93s, #Sentences=27469\n"
      ]
     }
    ],
@@ -148,9 +169,9 @@
     "# tokenizer takes as input a string and outputs a list of tokens.\n",
     "tokenizer = nlp.data.SpacyTokenizer('en_core_web_sm')\n",
     "\n",
-    "# length_clip takes as input a list and outputs a list with maximum length 300.\n",
-    "length_clip_review = nlp.data.ClipSequence(400)\n",
-    "length_clip_plot = nlp.data.ClipSequence(200)\n",
+    "# length_clip takes as input a list and outputs a list with maximum length 50.\n",
+    "length_clip_review = nlp.data.ClipSequence(50)\n",
+    "length_clip_plot = nlp.data.ClipSequence(50)\n",
     "\n",
     "def preprocess(x):\n",
     "    # now the first element in tuple is review, second plot and third label\n",
@@ -189,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocab(size=40004, unk=\"<unk>\", reserved=\"['<pad>', '<bos>', '<eos>']\")\n"
+      "Vocab(size=33156, unk=\"<unk>\", reserved=\"['<pad>', '<bos>', '<eos>']\")\n"
      ]
     }
    ],
@@ -200,7 +221,7 @@
     "vocab = nlp.Vocab(counter, max_size=40000)\n",
     "\n",
     "# load pre-trained embedding, Glove\n",
-    "embedding_weights = nlp.embedding.GloVe(source='glove.twitter.27B.200d')\n",
+    "embedding_weights = nlp.embedding.GloVe(source='glove.42B.300d')\n",
     "vocab.set_embedding(embedding_weights)\n",
     "print(vocab)\n",
     "\n",
@@ -222,7 +243,7 @@
     {
      "data": {
       "text/plain": [
-       "(157, 233)"
+       "(1180, 180)"
       ]
      },
      "execution_count": 15,
@@ -257,10 +278,10 @@
      "output_type": "stream",
      "text": [
       "FixedBucketSampler:\n",
-      "  sample_num=9500, batch_num=141\n",
-      "  key=[58, 96, 134, 172, 210, 248, 286, 324, 362, 400]\n",
-      "  cnt=[102, 465, 740, 1740, 1289, 846, 695, 609, 440, 2574]\n",
-      "  batch_size=[220, 133, 95, 74, 64, 64, 64, 64, 64, 64]\n"
+      "  sample_num=521892, batch_num=5440\n",
+      "  key=[14, 18, 22, 26, 30, 34, 38, 42, 46, 50]\n",
+      "  cnt=[323004, 96136, 55460, 25769, 11436, 5191, 2601, 1018, 592, 685]\n",
+      "  batch_size=[114, 88, 72, 64, 64, 64, 64, 64, 64, 64]\n"
      ]
     }
    ],
@@ -314,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -438,33 +459,33 @@
      "output_type": "stream",
      "text": [
       "EnhancedSeqInfer(\n",
-      "  (embedding_layer): Embedding(40004 -> 200, float32)\n",
-      "  (bilstm1): LSTM(200 -> 300, TNC, num_layers=3, dropout=0.5, bidirectional)\n",
-      "  (bilstm2): LSTM(2400 -> 300, TNC, dropout=0.5, bidirectional)\n",
+      "  (embedding_layer): Embedding(33156 -> 300, float32)\n",
+      "  (bilstm1): LSTM(None -> 300, TNC, num_layers=3, dropout=0.5, bidirectional)\n",
+      "  (bilstm2): LSTM(None -> 300, TNC, dropout=0.5, bidirectional)\n",
       "  (align_att): AlignAttention(\n",
       "  \n",
       "  )\n",
       "  (output_layer): HybridSequential(\n",
-      "    (0): Dense(2400 -> 1024, Activation(tanh))\n",
+      "    (0): Dense(None -> 1024, Activation(tanh))\n",
       "    (1): Dropout(p = 0.5, axes=())\n",
-      "    (2): Dense(1024 -> 1024, Activation(tanh))\n",
+      "    (2): Dense(None -> 1024, Activation(tanh))\n",
       "    (3): Dropout(p = 0.5, axes=())\n",
-      "    (4): Dense(1024 -> 2, linear)\n",
+      "    (4): Dense(None -> 3, linear)\n",
       "  )\n",
       ")\n"
      ]
     }
    ],
    "source": [
-    "test_model = True\n",
+    "test_model = False\n",
     "vocab_len = len(vocab)\n",
-    "emsize = 200    # word embedding size\n",
+    "emsize = 300    # word embedding size\n",
     "nhidden = 300   # lstm hidden_dim\n",
     "nlayers = 3     # lstm layers\n",
     "\n",
     "# final fc layer's number of hidden units and predicted number of classes\n",
     "nfc = 1024\n",
-    "nclass = 2\n",
+    "nclass = 3\n",
     "\n",
     "drop_prob = 0.5\n",
     "\n",
@@ -488,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,12 +527,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def one_epoch(data_iter, model, loss, trainer, ctx, is_train, epoch, \\\n",
-    "              clip=None, class_weight=None, loss_name='sce'):\n",
+    "def one_epoch(data_iter, model, loss, trainer, ctx, is_train, epoch, class_weight=None, loss_name='sce'):\n",
     "\n",
     "    loss_val = 0.\n",
     "    total_pred = []\n",
@@ -530,19 +550,6 @@
     "\n",
     "            # backward calculate\n",
     "            l.backward()\n",
-    "\n",
-    "            # clip gradient\n",
-    "            clip_params = [p.data() for p in model.collect_params().values()]\n",
-    "            if clip is not None:\n",
-    "                norm = nd.array([0.0], ctx)\n",
-    "                for param in clip_params:\n",
-    "                    if param.grad is not None:\n",
-    "                        norm += (param.grad ** 2).sum()\n",
-    "                norm = norm.sqrt().asscalar()\n",
-    "                if norm > clip:\n",
-    "                    for param in clip_params:\n",
-    "                        if param.grad is not None:\n",
-    "                            param.grad[:] *= clip / norm\n",
     "\n",
     "            # update parmas\n",
     "            trainer.step(batch_x_left.shape[0])\n",
@@ -568,7 +575,7 @@
     "                  (epoch, n_batch, batch_loss, accuracy_score(batch_true, batch_pred)))\n",
     "\n",
     "    # metric\n",
-    "    F1 = f1_score(np.array(total_true), np.array(total_pred), average='binary')\n",
+    "    F1 = f1_score(np.array(total_true), np.array(total_pred), average='weighted')\n",
     "    acc = accuracy_score(np.array(total_true), np.array(total_pred))\n",
     "    loss_val /= n_batch\n",
     "\n",
@@ -586,24 +593,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_valid(data_iter_train, data_iter_valid, model, loss, trainer, \\\n",
-    "                ctx, nepochs, clip=None, class_weight=None, loss_name='sce'):\n",
+    "                ctx, nepochs, class_weight=None, loss_name='sce'):\n",
     "\n",
     "    for epoch in range(1, nepochs+1):\n",
     "        start = time.time()\n",
     "        # train\n",
     "        is_train = True\n",
-    "        one_epoch(data_iter_train, model, loss, trainer, ctx, is_train,\n",
-    "                  epoch, clip, class_weight, loss_name)\n",
+    "        one_epoch(data_iter_train, model, loss, trainer, ctx, is_train, epoch, class_weight, loss_name)\n",
     "\n",
     "        # valid\n",
     "        is_train = False\n",
-    "        one_epoch(data_iter_valid, model, loss, trainer, ctx, is_train,\n",
-    "                  epoch, clip, class_weight, loss_name)\n",
+    "        one_epoch(data_iter_valid, model, loss, trainer, ctx, is_train, epoch, class_weight, loss_name)\n",
     "        end = time.time()\n",
     "        print('time %.2f sec' % (end-start))\n",
     "        print(\"*\"*100)"
@@ -618,18 +623,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "class_weight = None\n",
     "loss_name = 'sce'\n",
-    "optim = 'adam'\n",
-    "lr = 0.001\n",
+    "optim_name = 'adam'\n",
+    "lr = 0.01\n",
     "clip = .5\n",
     "nepochs = 10\n",
     "\n",
-    "trainer = gluon.Trainer(model.collect_params(), optim, {'learning_rate': lr})\n",
+    "trainer = gluon.Trainer(model.collect_params(), optim_name, {'learning_rate': lr, 'clip_gradient': clip})\n",
     "\n",
     "if loss_name == 'sce':\n",
     "    loss = gluon.loss.SoftmaxCrossEntropyLoss()\n",
@@ -653,51 +658,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1, batch 400, batch_train_loss 0.7526, batch_train_acc 0.641\n",
-      "epoch 1, batch 800, batch_train_loss 0.7259, batch_train_acc 0.641\n",
-      "epoch 1, batch 1200, batch_train_loss 0.4684, batch_train_acc 0.781\n",
-      "epoch 1, batch 1600, batch_train_loss 0.4696, batch_train_acc 0.870\n",
-      "epoch 1, batch 2000, batch_train_loss 0.4977, batch_train_acc 0.797\n",
-      "epoch 1, batch 2400, batch_train_loss 0.4754, batch_train_acc 0.812\n",
-      "epoch 1, batch 2800, batch_train_loss 0.3645, batch_train_acc 0.875\n",
-      "epoch 1, batch 3200, batch_train_loss 0.5161, batch_train_acc 0.781\n",
-      "epoch 1, batch 3600, batch_train_loss 0.5540, batch_train_acc 0.750\n",
-      "epoch 1, batch 4000, batch_train_loss 0.4992, batch_train_acc 0.766\n",
-      "epoch 1, batch 4400, batch_train_loss 0.7088, batch_train_acc 0.625\n",
-      "epoch 1, batch 4800, batch_train_loss 0.5714, batch_train_acc 0.672\n",
-      "epoch 1, batch 5200, batch_train_loss 0.5199, batch_train_acc 0.703\n",
-      "epoch 1, batch 5600, batch_train_loss 0.5471, batch_train_acc 0.734\n",
-      "epoch 1, batch 6000, batch_train_loss 0.3560, batch_train_acc 0.883\n",
-      "epoch 1, batch 6400, batch_train_loss 0.3609, batch_train_acc 0.857\n",
-      "epoch 1, batch 6800, batch_train_loss 0.6237, batch_train_acc 0.672\n",
-      "epoch 1, batch 7200, batch_train_loss 0.5938, batch_train_acc 0.672\n",
-      "epoch 1, batch 7600, batch_train_loss 0.1817, batch_train_acc 0.920\n",
-      "epoch 1, learning_rate 0.00100 \n",
-      "\t train_loss 0.5132, acc_train 0.770, F1_train 0.402, \n",
-      "\t valid_loss 0.4811, acc_valid 0.790, F1_valid 0.446, \n",
-      "time 8226.12 sec\n",
-      "****************************************************************************************************\n",
-      "epoch 2, batch 400, batch_train_loss 0.4511, batch_train_acc 0.797\n",
-      "epoch 2, batch 800, batch_train_loss 0.2964, batch_train_acc 0.896\n",
-      "epoch 2, batch 1200, batch_train_loss 0.4690, batch_train_acc 0.797\n",
-      "epoch 2, batch 1600, batch_train_loss 0.3525, batch_train_acc 0.844\n",
-      "epoch 2, batch 2000, batch_train_loss 0.5158, batch_train_acc 0.703\n",
-      "epoch 2, batch 2400, batch_train_loss 0.4190, batch_train_acc 0.831\n",
-      "epoch 2, batch 2800, batch_train_loss 0.6197, batch_train_acc 0.656\n",
-      "epoch 2, batch 3200, batch_train_loss 0.6784, batch_train_acc 0.609\n",
-      "epoch 2, batch 3600, batch_train_loss 0.5291, batch_train_acc 0.750\n",
-      "epoch 2, batch 4000, batch_train_loss 0.4475, batch_train_acc 0.781\n",
-      "epoch 2, batch 4400, batch_train_loss 0.6738, batch_train_acc 0.688\n",
-      "epoch 2, batch 4800, batch_train_loss 0.3731, batch_train_acc 0.828\n",
-      "epoch 2, batch 5200, batch_train_loss 0.4714, batch_train_acc 0.828\n",
-      "epoch 2, batch 5600, batch_train_loss 0.3271, batch_train_acc 0.883\n"
+      "epoch 1, batch 400, batch_train_loss 1.4615, batch_train_acc 0.234\n",
+      "epoch 1, batch 800, batch_train_loss 1.4119, batch_train_acc 0.289\n",
+      "epoch 1, batch 1200, batch_train_loss 1.2574, batch_train_acc 0.458\n",
+      "epoch 1, batch 1600, batch_train_loss 1.4951, batch_train_acc 0.342\n",
+      "epoch 1, batch 2000, batch_train_loss 1.2584, batch_train_acc 0.342\n",
+      "epoch 1, batch 2400, batch_train_loss 1.2200, batch_train_acc 0.375\n",
+      "epoch 1, batch 2800, batch_train_loss 1.7048, batch_train_acc 0.298\n",
+      "epoch 1, batch 3200, batch_train_loss 1.3721, batch_train_acc 0.298\n",
+      "epoch 1, batch 3600, batch_train_loss 1.2874, batch_train_acc 0.368\n",
+      "epoch 1, batch 4000, batch_train_loss 1.5439, batch_train_acc 0.318\n",
+      "epoch 1, batch 4400, batch_train_loss 1.4729, batch_train_acc 0.352\n",
+      "epoch 1, batch 4800, batch_train_loss 1.5096, batch_train_acc 0.360\n",
+      "epoch 1, batch 5200, batch_train_loss 1.3132, batch_train_acc 0.312\n"
      ]
     }
    ],
    "source": [
     "# train and valid\n",
     "train_valid(train_dataloader, valid_dataloader, model, loss, \\\n",
-    "            trainer, ctx, nepochs, clip=clip, class_weight=class_weight, loss_name=loss_name)"
+    "            trainer, ctx, nepochs, class_weight=class_weight, loss_name=loss_name)"
    ]
   },
   {
@@ -894,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
