--- a/imdb_loader.ipynb
+++ b/imdb_loader.ipynb
@@ -363,8 +363,8 @@
     }
    ],
    "source": [
-    "with mp.Pool() as mp:\n",
-    "    length_list = mp.map(get_word_count, df_movies.plot_summary)\n",
+    "with mp.Pool() as pool:\n",
+    "    length_list = pool.map(get_word_count, df_movies.plot_summary)\n",
     "print('the average number of words in a plot summary is %d' % \\\n",
     "      round(sum(length_list) / df_movies.shape[0]))"
    ]
